--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "A model for the static GTFS using sequelize.",
   "main": "index.js",
   "scripts": {
-    "download_gtfs": "node scripts/download.js",
-    "load_gtfs": "node scripts/load.js",
-    "test": "test"
+    "download-gtfs": "node scripts/download.js",
+    "load-gtfs": "node scripts/load.js",
+    "test-pg": "npm run test-download && npm run test-pg-load",
+    "test-download": "mocha tests/testDownload.js",
+    "test-pg-load": "mocha tests/testPg.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,16 @@
   },
   "homepage": "https://github.com/djstroky/gtfs-sequelize#readme",
   "dependencies": {
+    "async": "^1.4.2",
+    "csv": "^0.4.6",
+    "moment": "^2.10.6",
     "request": "^2.57.0",
+    "sequelize": "^3.3.2",
     "unzip2": "^0.2.5"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2"
   }
 }
