--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "download-gtfs": "node scripts/download.js",
     "load-gtfs": "node scripts/load.js",
-    "test-pg": "npm run test-download && npm run test-pg-load",
     "test-download": "mocha tests/testDownload.js",
-    "test-pg-load": "mocha tests/testPg.js"
+    "test-pg": "npm run test-download && npm run test-pg-load",
+    "test-pg-load": "mocha tests/testPg.js",
+    "test-postgis": "npm run test-download && npm run test-postgis-load",
+    "test-postgis-load": "mocha tests/testPostGIS.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +31,8 @@
     "async": "^1.4.2",
     "csv": "^0.4.6",
     "moment": "^2.10.6",
-    "request": "^2.57.0",
-    "sequelize": "^3.3.2",
+    "request": "^2.60.0",
+    "sequelize": "^3.5.1",
     "unzip2": "^0.2.5"
   },
   "devDependencies": {
