--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "mocha": "^2.2.5",
     "pg": "^4.4.0",
-    "pg-hstore": "^2.3.2"
+    "pg-hstore": "^2.3.2",
+    "q": "^1.4.1"
   }
 }
