--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "async": "^1.4.2",
     "csv": "^0.4.6",
+    "download": "^4.2.0",
+    "download-status": "^2.2.1",
     "moment": "^2.10.6",
     "request": "^2.60.0",
     "sequelize": "^3.5.1",
