--- a/package.json
+++ b/package.json
@@ -28,15 +28,20 @@
   "dependencies": {
     "async": "^1.4.2",
     "csv": "^0.4.6",
+    "db-streamer": "^0.3.1",
     "download": "^4.2.0",
     "download-status": "^2.2.1",
+    "ftp": "^0.3.10",
     "moment": "^2.10.6",
+    "rimraf": "^2.4.3",
     "sequelize": "^3.5.1",
-    "unzip2": "^0.2.5"
+    "unzip2": "^0.2.5",
+    "url-parse": "^1.0.2"
   },
   "devDependencies": {
     "mocha": "^2.2.5",
     "pg": "^4.4.0",
+    "pg-copy-streams": "^0.3.0",
     "pg-hstore": "^2.3.2",
     "q": "^1.4.1"
   }
