setting up travis+coverage

--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
   "description": "A model for the static GTFS using sequelize.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-pg && npm run test-postgis",
+    "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-postgres && npm run test-postgis",
     "test-download": "mocha tests/testDownload.js",
-    "test-mysql": "mocha tests/testDb.js --db-spec=mysql",
-    "test-mysql-spatial": "mocha tests/testDb.js --db-spec=mysql-spatial",
-    "test-pg": "mocha tests/testDb.js --db-spec=pg",
-    "test-postgis": "mocha tests/testDb.js --db-spec=postgis"
+    "test-mysql": "cross-env DIALECT=mysql mocha tests/testDb.js",
+    "test-mysql-spatial": "cross-env DIALECT=mysql-spatial mocha tests/testDb.js",
+    "test-postgres": "cross-env DIALECT=postgres mocha tests/testDb.js",
+    "test-postgis": "cross-env DIALECT=postgis mocha tests/testDb.js",
+    "cover-all": "npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run merge-coverage",
+    "precover-mysql": "rimraf coverage && rimraf coverage-mysql",
+    "cover-mysql": "cross-env DIALECT=mysql ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "postcover-mysql": "cross-env DIALECT=mysql node scripts/renameCoverageFolder.js",
+    "precover-mysql-spatial": "rimraf coverage && rimraf coverage-mysql-spatial",
+    "cover-mysql-spatial": "cross-env DIALECT=mysql-spatial ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "postcover-mysql-spatial": "cross-env DIALECT=mysql-spatial node scripts/renameCoverageFolder.js",
+    "precover-postgres": "rimraf coverage && rimraf coverage-postgres",
+    "cover-postgres": "cross-env DIALECT=postgres ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "postcover-postgres": "cross-env DIALECT=postgres node scripts/renameCoverageFolder.js",
+    "precover-postgis": "rimraf coverage && rimraf coverage-postgis",
+    "cover-postgis": "cross-env DIALECT=postgis ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "postcover-postgis": "cross-env DIALECT=postgis node scripts/renameCoverageFolder.js",
+    "premerge-coverage": "node scripts/preMerge.js",
+    "merge-coverage": "./node_modules/.bin/lcov-result-merger \"coverage-*/lcov.info\" \"coverage/lcov.info\"",
+    "codeclimate-send": "cross-env CODECLIMATE_REPO_TOKEN=783da970f89b4c64bcd7a9ac3240c8671dc2838688ccaa90bd642cf27ec359dc ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info",
+    "codeclimate": "npm run cover-all && npm run codeclimate-send"
   },
   "repository": {
     "type": "git",
@@ -43,6 +60,10 @@
   "devDependencies": {
     "bluebird": "^2.10.2",
     "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.3.1",
+    "cross-env": "^1.0.7",
+    "istanbul": "^0.4.2",
+    "lcov-result-merger": "^1.0.2",
     "mocha": "^2.2.5",
     "mysql": "^2.9.0",
     "pg": "^4.4.0",
