Adding download tests to coverage checks

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test-mysql-spatial": "cross-env DIALECT=mysql-spatial mocha tests/testDb.js",
     "test-postgres": "cross-env DIALECT=postgres mocha tests/testDb.js",
     "test-postgis": "cross-env DIALECT=postgis mocha tests/testDb.js",
-    "cover-all": "npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run merge-coverage",
+    "cover-all": "npm run cover-download && npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run merge-coverage",
+    "precover-download": "rimraf coverage && rimraf coverage-download",
+    "cover-download": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDownload.js",
+    "postcover-download": "cross-env DIALECT=download node scripts/renameCoverageFolder.js",
     "precover-mysql": "rimraf coverage && rimraf coverage-mysql",
     "cover-mysql": "cross-env DIALECT=mysql ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
     "postcover-mysql": "cross-env DIALECT=mysql node scripts/renameCoverageFolder.js",
