Improved download tests
- mocking http download using nock
- more code coverage
- asserting existence of downloaded files

--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-postgres && npm run test-postgis",
-    "test-download": "mocha tests/testDownload.js",
-    "test-mysql": "cross-env DIALECT=mysql mocha tests/testDb.js",
-    "test-mysql-spatial": "cross-env DIALECT=mysql-spatial mocha tests/testDb.js",
-    "test-postgres": "cross-env DIALECT=postgres mocha tests/testDb.js",
-    "test-postgis": "cross-env DIALECT=postgis mocha tests/testDb.js",
+    "test-download": "mocha tests/download.test.js",
+    "test-mysql": "cross-env DIALECT=mysql mocha tests/db.test.js",
+    "test-mysql-spatial": "cross-env DIALECT=mysql-spatial mocha tests/db.test.js",
+    "test-postgres": "cross-env DIALECT=postgres mocha tests/db.test.js",
+    "test-postgis": "cross-env DIALECT=postgis mocha tests/db.test.js",
     "cover-all": "npm run cover-download && npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run merge-coverage",
     "precover-download": "rimraf coverage && rimraf coverage-download",
-    "cover-download": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDownload.js",
+    "cover-download": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/download.test.js",
     "postcover-download": "cross-env DIALECT=download node scripts/renameCoverageFolder.js",
     "precover-mysql": "rimraf coverage && rimraf coverage-mysql",
-    "cover-mysql": "cross-env DIALECT=mysql ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "cover-mysql": "cross-env DIALECT=mysql ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
     "postcover-mysql": "cross-env DIALECT=mysql node scripts/renameCoverageFolder.js",
     "precover-mysql-spatial": "rimraf coverage && rimraf coverage-mysql-spatial",
-    "cover-mysql-spatial": "cross-env DIALECT=mysql-spatial ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "cover-mysql-spatial": "cross-env DIALECT=mysql-spatial ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
     "postcover-mysql-spatial": "cross-env DIALECT=mysql-spatial node scripts/renameCoverageFolder.js",
     "precover-postgres": "rimraf coverage && rimraf coverage-postgres",
-    "cover-postgres": "cross-env DIALECT=postgres ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "cover-postgres": "cross-env DIALECT=postgres ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
     "postcover-postgres": "cross-env DIALECT=postgres node scripts/renameCoverageFolder.js",
     "precover-postgis": "rimraf coverage && rimraf coverage-postgis",
-    "cover-postgis": "cross-env DIALECT=postgis ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/testDb.js",
+    "cover-postgis": "cross-env DIALECT=postgis ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
     "postcover-postgis": "cross-env DIALECT=postgis node scripts/renameCoverageFolder.js",
     "premerge-coverage": "node scripts/preMerge.js",
     "merge-coverage": "./node_modules/.bin/lcov-result-merger \"coverage-*/lcov.info\" \"coverage/lcov.info\"",
@@ -54,6 +54,7 @@
     "download-status": "^2.2.1",
     "ftp": "^0.3.10",
     "moment": "^2.10.6",
+    "nock": "^8.0.0",
     "rimraf": "^2.4.3",
     "sequelize": "^3.19.2",
     "unzip2": "^0.2.5",
