chore(travis): Fixing travis build settings
The environment variable setting got lost in the upgrade to semantic-release, so I'm adding it back

in.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ node_js:
   - "0.12"
   - "0.10"
 
+env:
+  - COVERAGE=false
+
 before_install:
   - npm i -g npm@^2.0.0
   - mysql -uroot -e 'CREATE DATABASE gtfs_sequelize_test;'
@@ -41,7 +44,7 @@ before_script:
 
 after_success:
   - npm run semantic-release
-  
+
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
