test(database-loading): Add code to allow tests to pass with node v0.10.x and pg 5.2

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "pg": "^5.2.0",
     "pg-copy-streams": "^1.0.0",
     "pg-hstore": "^2.3.2",
+    "promise-polyfill": "^5.2.1",
     "semantic-release": "^4.3.5",
     "streamsql": "^0.8.5",
     "yazl": "^2.3.0"
