feat(sqlite): Add support for sqlite
Fixes #3

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A model for the static GTFS using sequelize.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-postgres && npm run test-postgis",
+    "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-postgres && npm run test-postgis && npm run test-sqlite",
     "test-download": "mocha tests/download.test.js",
     "test-mysql": "cross-env DIALECT=mysql mocha tests/db.test.js",
     "test-mysql-spatial": "cross-env DIALECT=mysql-spatial mocha tests/db.test.js",
     "test-postgres": "cross-env DIALECT=postgres mocha tests/db.test.js",
     "test-postgis": "cross-env DIALECT=postgis mocha tests/db.test.js",
-    "cover-all": "npm run cover-download && npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run merge-coverage",
+    "test-sqlite": "cross-env DIALECT=sqlite mocha tests/db.test.js",
+    "cover-all": "npm run cover-download && npm run cover-mysql && npm run cover-mysql-spatial && npm run cover-postgres && npm run cover-postgis && npm run cover-sqlite && npm run merge-coverage",
     "precover-download": "rimraf coverage && rimraf coverage-download",
     "cover-download": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/download.test.js",
     "postcover-download": "cross-env DIALECT=download node scripts/renameCoverageFolder.js",
@@ -26,6 +27,9 @@
     "precover-postgis": "rimraf coverage && rimraf coverage-postgis",
     "cover-postgis": "cross-env DIALECT=postgis ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
     "postcover-postgis": "cross-env DIALECT=postgis node scripts/renameCoverageFolder.js",
+    "precover-sqlite": "rimraf coverage && rimraf coverage-sqlite",
+    "cover-sqlite": "cross-env DIALECT=sqlite ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests/db.test.js",
+    "postcover-sqlite": "cross-env DIALECT=sqlite node scripts/renameCoverageFolder.js",
     "premerge-coverage": "node scripts/preMerge.js",
     "merge-coverage": "./node_modules/.bin/lcov-result-merger \"coverage-*/lcov.info\" \"coverage/lcov.info\"",
     "codeclimate-send": "cross-env CODECLIMATE_REPO_TOKEN=783da970f89b4c64bcd7a9ac3240c8671dc2838688ccaa90bd642cf27ec359dc ./node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info",
@@ -74,6 +78,7 @@
     "pg-hstore": "^2.3.2",
     "promise-polyfill": "^6.0.0",
     "semantic-release": "^6.3.2",
+    "sqlite3": "^3.1.8",
     "streamsql": "^0.8.5",
     "yazl": "^2.3.0"
   },
