--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 language: node_js
 cache:
   directories:
@@ -16,6 +16,15 @@ env:
   - COVERAGE=false
 
 before_install:
+  - cd ~
+  - wget https://sqlite.org/2017/sqlite-autoconf-3160200.tar.gz
+  - tar xvfz sqlite-autoconf-3160200.tar.gz
+  - cd sqlite-autoconf-3160200
+  - ./configure
+  - sudo make
+  - sudo make install
+  - cd /home/travis/build/evansiroky/gtfs-sequelize
+  - sqlite3 -version
   - mysql -uroot -e 'CREATE DATABASE gtfs_sequelize_test;'
   - mysql -uroot -e "GRANT ALL PRIVILEGES ON gtfs_sequelize_test.* TO 'gtfs_sequelize'@'localhost' IDENTIFIED BY 'gtfs_sequelize';"
   - mysql -uroot -e "FLUSH PRIVILEGES;"
