--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A model for the static GTFS using sequelize.",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint lib",
     "test": "npm run test-download && npm run test-mysql && npm run test-mysql-spatial && npm run test-postgres && npm run test-postgis && npm run test-sqlite",
     "test-download": "mocha tests/download.test.js",
     "test-mysql": "cross-env DIALECT=mysql mocha tests/db.test.js",
@@ -69,6 +70,12 @@
     "codeclimate-test-reporter": "^0.4.0",
     "cross-env": "^3.1.3",
     "cz-conventional-changelog": "^1.1.6",
+    "eslint": "^4.14.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "istanbul": "^0.4.2",
     "lcov-result-merger": "^1.0.2",
     "mocha": "^3.0.0",
