--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "async": "^2.0.0-rc.5",
     "csv": "^1.1.0",
     "db-streamer": "^1.1.0",
+    "download": "^6.2.5",
     "ftp": "^0.3.10",
     "moment": "^2.10.6",
     "nock": "^9.0.0",
