ci(postgis): add postgis to travis
https://github.com/travis-ci/travis-ci/issues/6972

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ cache:
   directories:
     - node_modules
 
+addons:
+  postgresql: "9.5"
+  apt:
+    packages:
+      - postgresql-9.5-postgis-2.3
+
 notifications:
   email: false
 
