--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "dependencies": {
     "async": "^2.0.0-rc.5",
     "csvtojson": "^1.1.9",
-    "db-streamer": "^1.1.0",
+    "db-streamer": "^1.2.1",
     "download": "^6.2.5",
     "ftp": "^0.3.10",
     "moment": "^2.10.6",
@@ -84,6 +84,7 @@
     "pg": "^6.0.0",
     "pg-copy-streams": "^1.0.0",
     "pg-hstore": "^2.3.2",
+    "pg-query-stream": "^1.1.1",
     "promise-polyfill": "^6.0.0",
     "semantic-release": "^6.3.2",
     "sqlite3": "^3.1.8",
